--- a/android-textile/app/build.gradle
+++ b/android-textile/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
     // Support
     implementation "androidx.appcompat:appcompat:$androidxAppcompatVersion"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
 
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-common-java8:$androidxLifecycleVersion"
@@ -62,7 +62,7 @@ dependencies {
     // AndroidJUnitRunner and JUnit Rules
     // androidTestImplementation "androidx.test:runner:$androidxTestRunnerVersion"
     // androidTestImplementation "androidx.test:rules:$androidxTestRulesVersion"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation "androidx.test.ext:junit:1.1.1"
 
     // Assertions
     // androidTestImplementation "androidx.test.ext:junit:$androidxTestExtJunitVersion"
