--- a/package.json
+++ b/package.json
@@ -31,5 +31,17 @@
   "bugs": {
     "url": "https://github.com/flyskywhy/textiot/issues"
   },
-  "homepage": "https://github.com/flyskywhy/textiot#readme"
+  "homepage": "https://github.com/flyskywhy/textiot#readme",
+  "dependencies": {
+    "@ef-carbon/fetch": "^2.1.3",
+    "@ef-carbon/url": "^2.4.3",
+    "@therebel/ksuid": "^1.1.2-alpha1",
+    "buffer": "^5.2.1",
+    "isomorphic-form-data": "^2.0.0",
+    "protobufjs": "6.8.9",
+    "toposort": "^2.0.2",
+    "url-parse": "^1.4.4",
+    "url-toolkit": "^2.1.6",
+    "web-streams-polyfill": "^2.0.3"
+  }
 }
