--- a/react-native-sdk/android/build.gradle
+++ b/react-native-sdk/android/build.gradle
@@ -48,8 +48,42 @@ repositories {
 }
 
 dependencies {
-    api "io.textile:textile:$textileVersion"
+    api project(":textile-pb")
+    api project(":textile-mobile")
+    api project(":android-textile")
     implementation "com.facebook.react:react-native:+"
+
+    // Support
+    implementation "androidx.appcompat:appcompat:$androidxAppcompatVersion"
+    api "com.google.protobuf:protobuf-java:3.6.1"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-common-java8:$androidxLifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$androidxLifecycleVersion"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$androidxLifecycleVersion"
+
+    // UploadService
+    implementation "com.github.textileio:android-upload-service:$uploadServiceVersion"
+
+    // Testing
+    testImplementation "junit:junit:$junitVersion"
+
+    // Core library
+    // androidTestImplementation "androidx.test:core:$androidxTestCoreVersion"
+
+    // AndroidJUnitRunner and JUnit Rules
+    // androidTestImplementation "androidx.test:runner:$androidxTestRunnerVersion"
+    // androidTestImplementation "androidx.test:rules:$androidxTestRulesVersion"
+    androidTestImplementation "androidx.test.ext:junit:1.1.1"
+
+    // Assertions
+    // androidTestImplementation "androidx.test.ext:junit:$androidxTestExtJunitVersion"
+    // androidTestImplementation "androidx.test.ext:truth:$androidxTestExtTruthVersion"
+
+    // Utils
+    // androidTestImplementation "org.awaitility:awaitility:$awaitilityVersion"
+    // androidTestImplementation "commons-io:commons-io:$commonsIOVersion"
 }
 
 import groovy.json.JsonSlurper
