react-native-sdk with ios-textile work well

--- a/go-textile/.gitignore
+++ b/go-textile/.gitignore
@@ -3,6 +3,7 @@ dist/textile
 dist/go-textile-*
 /vendor/
 release/PBProject/pb/src/main/java
+/textile*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
