--- a/android-textile/textile/build.gradle
+++ b/android-textile/textile/build.gradle
@@ -152,6 +152,12 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
+javadoc {
+    options {
+        locale 'en_US'
+    }
+}
+
 artifacts {
     // archives javadocJar
     archives sourcesJar
