--- a/go-textile/Makefile
+++ b/go-textile/Makefile
@@ -51,7 +51,7 @@ protos:
 	$(eval P_TIMESTAMP := Mgoogle/protobuf/timestamp.proto=github.com/golang/protobuf/ptypes/timestamp)
 	$(eval P_ANY := Mgoogle/protobuf/any.proto=github.com/golang/protobuf/ptypes/any)
 	$(eval PKGMAP := $$(P_TIMESTAMP),$$(P_ANY))
-	cd pb/protos; protoc --go_out=$(PKGMAP):.. *.proto
+	cd pb/protos; protoc --go_out=$(PKGMAP):../../.. *.proto
 
 .PHONY: docs
 docs:
