--- a/android-textile/build.gradle
+++ b/android-textile/build.gradle
@@ -2,8 +2,9 @@ buildscript {
     apply from: './manifest.gradle'
 
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
         google()
-        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$gradleVersion"
@@ -14,8 +15,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
         google()
-        jcenter()
         maven {
             url 'https://jitpack.io'
         }
