--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,8 +4,9 @@ buildscript {
     apply from: './manifest.gradle'
 
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
         google()
-        jcenter()
     }
 
     dependencies {
@@ -37,8 +38,9 @@ allprojects {
 
 repositories {
     mavenCentral()
+    maven { url 'https://maven.aliyun.com/repository/google' }
+    maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
     google()
-    jcenter()
     maven {
         url "$rootDir/../../react-native/android"
     }
